Made contact us file and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="avocado__wrapper">
       <div class="nav-bar">
         <div class="nav__content">
-            <img src="img/pslo.png" alt="logo">
+            <img src="img/457220-200.png" alt="logo" width="50" height="50" class="logo">
               <ul>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#health">FEATURES</a></li>
@@ -105,7 +105,7 @@
       </div>
 
       <div class="contact-info">
-        E-mail - nidanshrestha@gmail.com <br>Phone - 9843086478
+        E-mail - kitenepal7@gmail.com <br>Phone - 9843086478
       </div>
     </div>
   </footer>
