--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,29 +7,39 @@
 </head>
 <body>
 
-<h3>Contact Form</h3>
-
 <div class="container">
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+  <h3>Contact Form</h3>
+  <div class="container-contactform">
+    <form action="/action_page.php">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" >
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" >
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
+      <label for="country">Country</label>
+      <select id="country" name="country">
       <option value="australia">Australia</option>
       <option value="canada">Canada</option>
       <option value="usa">USA</option>
-    </select>
+      </select>
 
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
-  </form>
+      <input type="submit" value="Submit">
+    </form>
 </div>
+
+<div class="Contact-detail">
+   <p>Gapali-4, Suryabinayak, Bhaktapur, Nepal</p>
+   <p>Tel : 98XXXXXXXXX </p>
+   <p>Email : <a href="#" target="_blank">kitenepal7@gmail.com</a> </p>
+</div>
+
+</div>
+
+
 
 </body>
 </html>
