Commented about section of index file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </section>
       
-  <section id="about">
+<!--   <section id="about">
     <div class="about__shape">
       <h1>Different shapes and color</h1>
       <p><span>Avocado<sup>TM</sup></span> comes in many different unique shapes and colors.<br>Find the one that fits your personal perferences.</p>
@@ -35,7 +35,7 @@
       <img src="img/shape.png" class="shape">
       <img src="img/color.png" class="shape">
     </div>
-  </section>
+  </section> -->
 
   <section id="health">
     <div class="health__avocado">
