--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="nav__content">
             <img src="img/457220-200.png" alt="logo" width="50" height="50" class="logo">
               <ul>
-                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#about">CHANGED</a></li>
                 <li><a href="#health">FEATURES</a></li>
                 <li><a href="#transform">NUTRITON</a></li>
                 <li><a href="#order-block">ORDER</a></li>
